@@ -1,3 +1,4 @@
+- Increased compatibility with stricter MySQL server modes.
 - Increased the maximum length of the workflow.workflow_name field to 255.
 
 
